<resources>
    <string name="app_name">Lab3</string>
    <string name="stop_watch">Stop Watch</string>
    <string name="task_manager">Task Manager</string>
    <string name="welcome_to_sliit_task_app">Welcome to SLIIT Task App</string>
    <string name="subject">Subject</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="saved_times">Saved Times</string>
    <string name="applogo">applogo</string>
</resources>